setup email client

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 PORT = 8000
 JWT_SECRET=Kq9tX3!uPf72@eVn#Y4sLz%8mWqAd6Rb
+
+SMTP_HOST=smtp.gmail.com  # <- will change per client
+SMTP_PORT=465             # <- can be 587 for TLS, 465 for SSL
+SMTP_SECURE=true          # <- true for 465, false for 587
+SMTP_EMAIL=christos@autotetra.com
+SMTP_PASS=ruqt ysgt iumd yyxk
