--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ SMTP_EMAIL=christos@autotetra.com
 SMTP_PASS=ruqt ysgt iumd yyxk
 
 NOTION_API_KEY=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
+NOTION_DATABASE_ID=1df67cdca3e580e0950efc17b825aa69
