convert frontend to abstract

--- a/.env
+++ b/.env
@@ -1,11 +1,22 @@
-PORT = 8000
+# ----------------------------------------
+# ✅ SERVER CONFIG
+# ----------------------------------------
+PORT=8000
 JWT_SECRET=Kq9tX3!uPf72@eVn#Y4sLz%8mWqAd6Rb
 
-SMTP_HOST=smtp.gmail.com  # <- will change per client
-SMTP_PORT=465             # <- can be 587 for TLS, 465 for SSL
-SMTP_SECURE=true          # <- true for 465, false for 587
+# ----------------------------------------
+# ✅ CLIENT INTEGRATION (ACTIVE SYSTEM)
+# ----------------------------------------
+CLIENT_TYPE=notion   # or airtable, etc.
+CLIENT_API_KEY=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   # Only used if CLIENT_TYPE=notion
+CLIENT_DATABASE_ID=1df67cdca3e580e0950efc17b825aa69
+
+
+# ----------------------------------------
+# ✅ SMTP / EMAIL CONFIG
+# ----------------------------------------
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465               # Can be 465 for SSL or 587 for TLS
+SMTP_SECURE=true            # true = SSL (465), false = TLS (587)
 SMTP_EMAIL=christos@autotetra.com
 SMTP_PASS=ruqt ysgt iumd yyxk
-
-NOTION_API_KEY=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
-NOTION_DATABASE_ID=1df67cdca3e580e0950efc17b825aa69
