polish user abstraction

--- a/.env
+++ b/.env
@@ -2,13 +2,13 @@
 # ✅ SERVER CONFIG
 # ----------------------------------------
 PORT=8000
-JWT_SECRET=Kq9tX3!uPf72@eVn#Y4sLz%8mWqAd6Rb
+JWT_SECRET="Kq9tX3!uPf72@eVn#Y4sLz%8mWqAd6Rb"
 
 # ----------------------------------------
 # ✅ CLIENT INTEGRATION (ACTIVE SYSTEM)
 # ----------------------------------------
 CLIENT_TYPE=notion   # or airtable, etc.
-CLIENT_API_KEY=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   # Only used if CLIENT_TYPE=notion
+CLIENT_API_KEY=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 
 CLIENT_DATABASE_ID=1df67cdca3e580e0950efc17b825aa69
 
 
